--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "knex": "^3.1.0",
     "limdu": "^1.0.0",
+    "prompt-sync": "^4.2.0",
+    "prompt-sync-history": "^1.0.1",
     "sqlite3": "^5.1.7"
   }
 }
